--- a/war/Pennbook.html
+++ b/war/Pennbook.html
@@ -16,7 +16,7 @@
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Web Application Starter Project</title>
+    <title>pennbook</title>
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
@@ -44,18 +44,14 @@
       </div>
     </noscript>
 
-    <h1>Web Application Starter Project</h1>
+    <h1>pennbook</h1>
 
     <table align="center">
       <tr>
-        <td colspan="2" style="font-weight:bold;">Please enter your name:</td>        
+        <td id="topbarContainer"></td>
       </tr>
       <tr>
-        <td id="nameFieldContainer"></td>
-        <td id="sendButtonContainer"></td>
-      </tr>
-      <tr>
-        <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
+        <td colspan="2" style="color:red;" id="profileInfoContainer"></td>
       </tr>
     </table>
   </body>
