--- a/war/Pennbook.html
+++ b/war/Pennbook.html
@@ -46,13 +46,8 @@
 
     <h1>pennbook</h1>
 
-    <table align="center">
-      <tr>
-        <td id="topbarContainer"></td>
-      </tr>
-      <tr>
-        <td colspan="2" style="color:red;" id="profileInfoContainer"></td>
-      </tr>
-    </table>
+    <div id="topbarContainer"></div>
+    <div id="mainContainer"></div>
+    
   </body>
 </html>
